# replace-docx-pdf

./: .gitignore  README.md  devenv.nix  pyproject.toml  setup.py
docx/: __init__.py  document.py
